--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .back-to-top i {
   font-size: 28px;
-  color: #fff;
+  color: #321b1b;
   line-height: 0;
 }
 .back-to-top:hover {
@@ -90,7 +90,7 @@ h1, h2, h3, h4, h5, h6 {
 #header .logo img {
   padding: 0;
   margin: 0;
-  max-height: 40px;
+  max-height: 60px;
 }
 @media (max-width: 992px) {
   #header {
@@ -578,13 +578,13 @@ section {
   border: 0;
   padding: 20px;
   transition: 0.3s;
-  color: #21413c;
+  color: #8d4925;
 }
 .features .nav-link:hover {
-  color: #1bac91;
+  color: #5d2417;
 }
 .features .nav-link h4 {
-  font-size: 18px;
+  font-size: 23px;
   font-weight: 600;
 }
 .features .nav-link p {
@@ -592,10 +592,10 @@ section {
   margin-bottom: 0;
 }
 .features .nav-link.active {
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 2px 15px rgba(255, 2, 2, 0.205);
 }
 .features .nav-link.active h4 {
-  color: #1bac91;
+  color: #320000;
 }
 .features .tab-pane.active {
   -webkit-animation: slide-down 0.5s ease-out;
@@ -1230,7 +1230,7 @@ section {
 }
 #footer .footer-top {
   background: #5d2417;
-  border-bottom: 1px solid #18302c;
+  border-bottom: 1px solid #ffb48a;
   padding: 60px 0 30px 0;
 }
 #footer .footer-top .footer-info {
@@ -1253,7 +1253,7 @@ section {
 #footer .footer-top .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #1c3733;
+  background: #8d4925;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1305,7 +1305,7 @@ section {
   line-height: 1;
 }
 #footer .footer-top .footer-links ul a:hover {
-  color: #f0cf16;
+  color: #ffb48a;
 }
 #footer .footer-top .footer-newsletter form {
   margin-top: 30px;
