--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,6 +319,25 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
   margin: 15px;
 }
+
+/* ----------------------------------------------------------
+. video responsive
+------------------------------------------------------------*/
+.video-contenedor {
+  position: relative;
+  padding-bottom: 70%;
+  padding-top: 0px;
+  height: 0;
+  overflow: hidden;
+}
+
+.video-contenedor iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
@@ -963,6 +982,29 @@ section {
 }
 .portfolio-details .portfolio-description p {
   padding: 0;
+}
+
+.clients .swiper-pagination {
+  margin-top: 20px;
+  position: relative;
+}
+.clients .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #fff;
+  opacity: 1;
+  border: 1px solid #c57d56;
+}
+.clients .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #c57d56;
+}
+.clients .swiper-slide img {
+  opacity: 0.5;
+  filter: grayscale(100%);
+}
+.clients .swiper-slide img:hover {
+  filter: none;
+  opacity: 1;
 }
 
 /*--------------------------------------------------------------
